--- a/YoutubePlaylistAPI/VixtapeManager.csproj
+++ b/YoutubePlaylistAPI/VixtapeManager.csproj
@@ -67,20 +67,31 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Exceptions.cs" />
-    <Compile Include="PlaylistModel.cs" />
-    <Compile Include="Store.cs" />
-    <Compile Include="VideoModel.cs" />
-    <Compile Include="FormMain.cs">
+    <Compile Include="Forms\AddVideoForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormMain.Designer.cs">
-      <DependentUpon>FormMain.cs</DependentUpon>
+    <Compile Include="Forms\AddVideoForm.Designer.cs">
+      <DependentUpon>AddVideoForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Exceptions.cs" />
+    <Compile Include="Forms\FormUtils.cs" />
+    <Compile Include="Models\PlaylistModel.cs" />
+    <Compile Include="Store.cs" />
+    <Compile Include="Models\VideoModel.cs" />
+    <Compile Include="Forms\MainForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="FormMain.resx">
-      <DependentUpon>FormMain.cs</DependentUpon>
+    <Compile Include="YoutubeAPIController.cs" />
+    <EmbeddedResource Include="Forms\AddVideoForm.resx">
+      <DependentUpon>AddVideoForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
