--- a/YoutubePlaylistAPI/packages.config
+++ b/YoutubePlaylistAPI/packages.config
@@ -1,8 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CsvHelper" version="28.0.1" targetFramework="net48" />
   <package id="Google.Apis" version="1.57.0" targetFramework="net48" />
   <package id="Google.Apis.Auth" version="1.57.0" targetFramework="net48" />
   <package id="Google.Apis.Core" version="1.57.0" targetFramework="net48" />
   <package id="Google.Apis.YouTube.v3" version="1.57.0.2750" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.0.0" targetFramework="net48" />
+  <package id="Microsoft.Bcl.HashCode" version="1.0.0" targetFramework="net48" />
+  <package id="Microsoft.CSharp" version="4.3.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.0" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net48" />
 </packages>
